[tool.poetry]
name = "cloudformation-custom-resource-helper-mock"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.8"
crhelper = "*"
boto3 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
